[package]
name = "musicindex-live-relay"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
http = "1"
futures-core = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socketioxide = { version = "0.18", features = ["state", "tracing", "v4"] }
subtle = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
